Fix vertical align for dx-switch-wrapper container

--- a/styles/widgets/material/switch.material.less
+++ b/styles/widgets/material/switch.material.less
@@ -32,6 +32,7 @@
     left: -@MATERIAL_SWITCH_SHADOW_BLUR_RADIUS;
     top: -@MATERIAL_SWITCH_SHADOW_BLUR_RADIUS;
     overflow: hidden;
+    vertical-align: middle;
 }
 
 .dx-switch {
